--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["clockify", "time-tracking", "electron"],
+  "keywords": [
+    "clockify",
+    "time-tracking",
+    "electron"
+  ],
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
@@ -17,6 +21,7 @@
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "nodemon": "^3.1.9"
   }
 }
